feat: Update new home page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "dotnet.defaultSolution": "CarStore_ControllerAPI.sln"
+    "dotnet.defaultSolution": "CarStore_ControllerAPI.sln",
+    "cSpell.words": [
+        "Hsts"
+    ]
 }
